@@ -20,6 +20,251 @@
 #include "nrrd.h"
 
 /*
+******** nrrdSplice()
+**
+** (opposite of nrrdSlice): replaces one slice of a nrrd with
+** another nrrd.  Will allocate memory for output only if nout != nin.
+*/
+int
+nrrdSplice(Nrrd *nout, Nrrd *nin, Nrrd *nslice, int axis, int pos) {
+  char me[]="nrrdSplice", func[]="splice", err[AIR_STRLEN_MED];
+  size_t 
+    I, 
+    rowLen,                  /* length of segment */
+    colStep,                 /* distance between start of each segment */
+    colLen;                  /* number of periods */
+  int i;
+  char *src, *dest, *sliceCont;
+
+  if (!(nin && nout && nslice)) {
+    sprintf(err, "%s: got NULL pointer", me);
+    biffAdd(NRRD, err); return 1;
+  }
+  if (nout == nslice) {
+    sprintf(err, "%s: nout==nslice disallowed", me);
+    biffAdd(NRRD, err); return 1;
+  }
+
+  /* check that desired slice location is legit */
+  if (!(AIR_IN_CL(0, axis, nin->dim-1))) {
+    sprintf(err, "%s: slice axis %d out of bounds (0 to %d)", 
+	    me, axis, nin->dim-1);
+    biffAdd(NRRD, err); return 1;
+  }
+  if (!(AIR_IN_CL(0, pos, nin->axis[axis].size-1) )) {
+    sprintf(err, "%s: position %d out of bounds (0 to %d)", 
+	    me, pos, nin->axis[axis].size-1);
+    biffAdd(NRRD, err); return 1;
+  }
+
+  /* check that slice will fit in nin */
+  if (!( nrrdValid(nslice) && nrrdValid(nin) )) {
+    sprintf(err, "%s: input or slice not valid nrrd", me);
+    biffAdd(NRRD, err); return 1;
+  }
+  if (!( nin->dim-1 == nslice->dim )) {
+    sprintf(err, "%s: dim of slice (%d) not one less than dim of input (%d)",
+	    me, nslice->dim, nin->dim-1);
+    biffAdd(NRRD, err); return 1;
+  }
+  if (!( nin->type == nslice->type )) {
+    sprintf(err, "%s: type of slice (%s) != type of input (%s)",
+	    me, airEnumStr(nrrdType, nslice->type),
+	    airEnumStr(nrrdType, nin->type));
+    biffAdd(NRRD, err); return 1;
+  }
+  if (nrrdTypeBlock == nin->type) {
+    if (!( nin->blockSize == nslice->blockSize )) {
+      sprintf(err, "%s: input's blockSize (%d) != subvolume's blockSize (%d)",
+	      me, nin->blockSize, nslice->blockSize);
+      biffAdd(NRRD, err); return 1;
+    }
+  }
+  for (i=0; i<nslice->dim; i++) {
+    if (!( nin->axis[i + (i >= axis)].size == nslice->axis[i].size )) {
+      sprintf(err, "%s: input's axis %d size (%d) != slices axis %d size (%d)",
+	      me, i + (i >= axis),
+	      nin->axis[i + (i >= axis)].size, i, nslice->axis[i].size);
+      biffAdd(NRRD, err); return 1;
+    }
+  }
+
+  if (nout != nin) {
+    if (nrrdCopy(nout, nin)) {
+      sprintf(err, "%s:", me);
+      biffAdd(NRRD, err); return 1;
+    }
+  } 
+  /* else we're going to splice in place.
+     In either case, all peripheral information is preserved */
+
+  /* the following was copied from nrrdSlice() */
+  /* set up control variables */
+  rowLen = colLen = 1;
+  for (i=0; i<nin->dim; i++) {
+    if (i < axis) {
+      rowLen *= nin->axis[i].size;
+    } else if (i > axis) {
+      colLen *= nin->axis[i].size;
+    }
+  }
+  rowLen *= nrrdElementSize(nin);
+  colStep = rowLen*nin->axis[axis].size;
+
+  /* the skinny */
+  src = nout->data;    /* switched src,dest from nrrdSlice() */
+  dest = nslice->data;
+  src += rowLen*pos;
+  for (I=0; I<colLen; I++) {
+    /* HEY: replace with AIR_MEMCPY() or similar, when applicable */
+    memcpy(src, dest, rowLen);  /* switched src,dest from nrrdSlice() */
+    src += colStep;
+    dest += rowLen;
+  }
+  
+  sliceCont = (nslice->content
+	       ? airStrdup(nslice->content)
+	       : airStrdup(nrrdStateUnknownContent));
+  if (!sliceCont) {
+    sprintf(err, "%s: couldn't copy slice content!", me);
+    biffAdd(NRRD, err); return 1;
+  }
+  if (nrrdContentSet(nout, func, nin, "%s,%d,%d", sliceCont, axis, pos)) {
+    sprintf(err, "%s:", me);
+    biffAdd(NRRD, err); return 1;
+  }
+  free(sliceCont);
+
+  return 0;
+}
+
+/*
+******** nrrdInset()
+**
+** (opposite of nrrdCrop()) replace some sub-volume inside a nrrd with
+** another given nrrd.
+**
+*/
+int
+nrrdInset(Nrrd *nout, Nrrd *nin, Nrrd *nsub, int *min) {
+  char me[]="nrrdInset", func[] = "inset", err[AIR_STRLEN_MED],
+    buff1[NRRD_DIM_MAX*30], buff2[AIR_STRLEN_SMALL];
+  int d,
+    lineSize,                /* #bytes in one scanline to be copied */
+    typeSize,                /* size of data type */
+    cIn[NRRD_DIM_MAX],       /* coords for line start, in input */
+    cOut[NRRD_DIM_MAX],      /* coords for line start, in output */
+    szIn[NRRD_DIM_MAX],
+    szOut[NRRD_DIM_MAX];
+  size_t I,
+    idxIn, idxOut,           /* linear indices for input and output */
+    numLines;                /* number of scanlines in output nrrd */
+  char *dataIn, *dataOut, *subCont;
+  double zeros[1024];
+
+  memset(zeros, 0, 1024*sizeof(double));
+
+  /* errors */
+  if (!(nout && nin && nsub && min)) {
+    sprintf(err, "%s: got NULL pointer", me);
+    biffAdd(NRRD, err); return 1;
+  }
+  if (nout == nsub) {
+    sprintf(err, "%s: nout==nsub disallowed", me);
+    biffAdd(NRRD, err); return 1;
+  }
+  if (!( nrrdValid(nsub) && nrrdValid(nin) )) {
+    sprintf(err, "%s: input or subvolume not valid nrrd", me);
+    biffAdd(NRRD, err); return 1;
+  }
+  if (!( nin->dim == nsub->dim )) {
+    sprintf(err, "%s: input's dim (%d) != subvolume's dim (%d)",
+	    me, nin->dim, nsub->dim);
+    biffAdd(NRRD, err); return 1;
+  }
+  if (!( nin->type == nsub->type )) {
+    sprintf(err, "%s: input's type (%s) != subvolume's type (%s)", me,
+	    airEnumStr(nrrdType, nin->type),
+	    airEnumStr(nrrdType, nsub->type));
+    biffAdd(NRRD, err); return 1;
+  }
+  if (nrrdTypeBlock == nin->type) {
+    if (!( nin->blockSize == nsub->blockSize )) {
+      sprintf(err, "%s: input's blockSize (%d) != subvolume's blockSize (%d)",
+	      me, nin->blockSize, nsub->blockSize);
+      biffAdd(NRRD, err); return 1;
+    }
+  }
+  for (d=0; d<nin->dim; d++) {
+    if (!( 0 <= min[d] && 
+	   min[d] + nsub->axis[d].size - 1 <= nin->axis[d].size - 1)) {
+      sprintf(err, "%s: axis %d range of inset indices [%d,%d] not within "
+	      "input indices [0,%d]", me, d,
+	      min[d], min[d] + nsub->axis[d].size - 1,
+	      nin->axis[d].size - 1);
+      biffAdd(NRRD, err); return 1;
+    }
+  }
+  
+  if (nout != nin) {
+    if (nrrdCopy(nout, nin)) {
+      sprintf(err, "%s:", me);
+      biffAdd(NRRD, err); return 1;
+    }
+  } 
+  /* else we're going to inset in place.
+     In either case, all peripheral information is preserved */
+
+  /* WARNING: following code copied/modified from nrrdCrop(),
+     so the meanings of "in"/"out", "src"/"dest" are all messed up */
+
+  nrrdAxesGet_nva(nin, nrrdAxesInfoSize, szIn);
+  nrrdAxesGet_nva(nsub, nrrdAxesInfoSize, szOut);
+  numLines = 1;
+  for (d=1; d<nin->dim; d++) {
+    numLines *= szOut[d];
+  }
+  lineSize = szOut[0]*nrrdElementSize(nin);
+  
+  /* the skinny */
+  typeSize = nrrdElementSize(nin);
+  dataIn = nout->data;
+  dataOut = nsub->data;
+  memset(cOut, 0, NRRD_DIM_MAX*sizeof(int));
+  for (I=0; I<numLines; I++) {
+    for (d=0; d<nin->dim; d++)
+      cIn[d] = cOut[d] + min[d];
+    NRRD_INDEX_GEN(idxOut, cOut, szOut, nin->dim);
+    NRRD_INDEX_GEN(idxIn, cIn, szIn, nin->dim);
+    memcpy(dataIn + idxIn*typeSize, dataOut + idxOut*typeSize, lineSize);
+    /* the lowest coordinate in cOut[] will stay zero, since we are 
+       copying one (1-D) scanline at a time */
+    NRRD_COORD_INCR(cOut, szOut, nin->dim, 1);
+  }
+  
+  strcpy(buff1, "[");
+  for (d=0; d<nin->dim; d++) {
+    sprintf(buff2, "%s%d", (d ? "," : ""), min[d]);
+    strcat(buff1, buff2);
+  }
+  strcat(buff1, "]");
+  subCont = (nsub->content
+	     ? airStrdup(nsub->content)
+	     : airStrdup(nrrdStateUnknownContent));
+  if (!subCont) {
+    sprintf(err, "%s: couldn't copy subvolume content!", me);
+    biffAdd(NRRD, err); return 1;
+  }
+  if (nrrdContentSet(nout, func, nin, "%s,%s", subCont, buff1)) {
+    sprintf(err, "%s:", me);
+    biffAdd(NRRD, err); return 1;
+  }
+  free(subCont);
+
+  return 0;
+}
+
+/*
 ******** nrrdPad()
 **
 ** strictly for padding
@@ -137,7 +382,7 @@ nrrdPad(Nrrd *nout, Nrrd *nin, int *min, int *max, int boundary, ...) {
 	break;
       }
     }
-    NRRD_COORD_INDEX(idxIn, cIn, szIn, dim);
+    NRRD_INDEX_GEN(idxIn, cIn, szIn, dim);
     if (!outside) {
       /* the cIn coords are within the input nrrd: do memcpy() of whole
 	 1-D scanline, then artificially bump for-loop to the end of
